--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,10 +1,28 @@
-<!-- 🏗 Structo the Builder -->
-<!-- Wykorzystaj odpowiednią składnię EJS do odpowiednich zadań. -->
-<!-- Podpowiedź: <% if (products?.length > 0) { %> -->
-<!-- Podpowiedź: ... -->
-<!-- Podpowiedź: <% } %> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title><%= headTitle %></title>
+  <link rel="stylesheet" href="/css/main.css">
+</head>
+<body>
+  <%- include("partials/navigation", { menuLinks, activeLinkPath }) %>
 
-<!-- Wykorzystaj odpowiednią składnię EJS do iteracyjnego zwracania elementów HTML. -->
-<!-- Podpowiedź: <% products.forEach(product => { %> -->
-<!-- Podpowiedź: ... -->
-<!-- Podpowiedź: <% }); %> -->
+  <main>
+    <h1>Products</h1>
+
+    <!-- 🏗 Structo the Builder -->
+    <!-- Wykorzystaj odpowiednią składnię EJS do odpowiednich zadań. -->
+    <% if (products?.length > 0) { %>
+      <ul>
+        <!-- Wykorzystaj odpowiednią składnię EJS do iteracyjnego zwracania elementów HTML. -->
+        <% products.forEach(product => { %>
+          <li>Name: <%= product.name %>, Description: <%= product.description %></li>
+        <% }); %>
+      </ul>
+    <% } else { %>
+      <div>No products available.</div>
+    <% } %>
+  </main>
+</body>
+</html>
